salesforce/force-app/main/default/objects/Return__c/Return__c.object-meta.xml
<CustomObject>
    <description>A return or exchange. Tracked up to 'Refund Initiated', after which the system reminds Gitanjali to check her own bank/app and record what actually arrived. Dakiya never reads bank data.</description>
    <label>Return</label>
    <nameField>
        <displayFormat>RET-{0000}</displayFormat>
        <label>Return Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>