salesforce/force-app/main/default/objects/Return__c/fields/Expected_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Refund_Amount__c</fullName>
    <label>Expected Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>