salesforce/force-app/main/default/objects/Return__c/fields/Outcome_Recorded_On__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Recorded_On__c</fullName>
    <label>Outcome Recorded On</label>
    <type>Date</type>
</CustomField>