salesforce/force-app/main/default/objects/Return__c/fields/Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purchase__c</fullName>
    <label>Purchase</label>
    <deleteConstraint>Cascade</deleteConstraint>
    <referenceTo>Purchase__c</referenceTo>
    <relationshipLabel>Returns</relationshipLabel>
    <relationshipName>Returns</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>