salesforce/force-app/main/default/objects/Return__c/fields/Purchase_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Item__c</fullName>
    <description>Set when only one item is going back.</description>
    <label>Purchase Item</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Purchase_Item__c</referenceTo>
    <relationshipLabel>Returns</relationshipLabel>
    <relationshipName>Returns</relationshipName>
    <type>Lookup</type>
</CustomField>