salesforce/force-app/main/default/objects/Return__c/fields/Refund_Check_Due__c.field-meta.xml
<CustomField>
    <fullName>Refund_Check_Due__c</fullName>
    <description>Refund_Initiated_On__c + vendor Typical_Refund_Days__c, or DefaultRefundCheckDays. When a 'did your refund arrive?' reminder fires.</description>
    <label>Refund Check Due</label>
    <type>Date</type>
</CustomField>