salesforce/force-app/main/default/objects/Return__c/fields/Refund_Initiated_On__c.field-meta.xml
<CustomField>
    <fullName>Refund_Initiated_On__c</fullName>
    <description>The last thing the system can observe. Everything after this is Gitanjali checking and telling it.</description>
    <label>Refund Initiated On</label>
    <type>Date</type>
</CustomField>