salesforce/force-app/main/default/objects/Return__c/fields/Refund_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Refund_Outcome__c</fullName>
    <description>Recorded by Gitanjali, never inferred.</description>
    <label>Refund Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Full to Original Payment</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Store Credit</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Not Received Yet</fullName>
                </value>
                <value>
                    <fullName>Not Received (Escalated)</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>