salesforce/force-app/main/default/objects/Return__c/fields/Refund_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Received_Amount__c</fullName>
    <label>Refund Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>