salesforce/force-app/main/default/objects/Return__c/fields/Reminder_Count__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Count__c</fullName>
    <description>Capped by MaxRefundReminders, after which the agent offers an escalation draft.</description>
    <label>Reminder Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>