salesforce/force-app/main/default/objects/Return__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Pickup Scheduled</fullName>
                </value>
                <value>
                    <fullName>Picked Up</fullName>
                </value>
                <value>
                    <fullName>Received by Seller</fullName>
                </value>
                <value>
                    <fullName>Refund Initiated</fullName>
                </value>
                <value>
                    <fullName>Refund Check Due</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>