salesforce/force-app/main/default/objects/Return__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Return</fullName>
                    <default>true</default>
                    <label>Return</label>
                </value>
                <value>
                    <fullName>Exchange or Replacement</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>